# HumanoidWalkingController

./: CMakeLists.txt  Git_MEMO.md  README.md  Robot.body  Trajectory_planner.h  controller.cpp  test.cnoid
Body/: Robot.body
MyLibrary/: CMakeLists.txt  Footprint.cpp  Footprint.h  Footprint_planner.cpp  Footprint_planner.h  IK.cpp  IK.h  Sensing_Unit.cpp  Sensing_Unit.h  Stabilizer.cpp  Stabilizer.h  Trajectory_planner.cpp  Trajectory_planner.h
controller/: CMakeLists.txt  controller.cpp
project/: test.cnoid
